--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: "Roboto", "sans-serif";
+    font-family: 'Titillium Web', sans-serif;
 }
 
 body {
@@ -17,58 +17,53 @@ body {
 
 
 .btn-signup  {
-    background-color: #9fd63b;
-    border: none;
-    height: 50px;
+    background-color: #93d02b;
+   height: 50px;
     width: 200px;
-    /* margin-left: 50px; */
-    border-radius: 10px;
-    color: white;
+    text-shadow: 1px 1px 0 #51850e;
+    border-radius: 2px;
+    border: 1px solid #3b9a00;
+    color: #fff;
     cursor: pointer;
     width: 100%;
-    flex: 0 0 50%;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .btn-send{
-    background-color: #9fd63b;
+    background-color: #93d02b;
     border: none;
     height: 50px;
     width: 50%;
-    /* margin-left: 50px; */
-    border-radius: 10px;
-    color: white;
+    border: 1px solid #3b9a00;
+    border-radius: 2px;
+    color: #fff;
+    padding: 10px 10px;
     cursor: pointer;
-    flex: 0 0 50%;
 }
 
 .btn-done{
-    background-color: #bfdd9b;
-    border-radius: 10px;
-    border: none;
+    background-color: #bcdb97;
+    border-radius: 2px;
+    border: 1px solid #90ca6d;
     height: 50px;
     width: 50%;
-    display: inline-block;
-    color: white;
+    color: #fff;
     cursor: pointer;
-    flex: 0 0 50%;
-
-
 }
 .btn-reset{
-    border: none;
-    background-color: #f34658;
-    border-radius: 10px;
+    background-color: #f4495b;
+    border: 1px solid #a2202a;
+    border-radius: 2px;
     height: 50px;
-    width: 50%;
-    color: white;
+    color: #fff;
     cursor: pointer;
-    flex: 0 0 50%;
+    padding: 10px 10px;
 }
 
 .logo {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0);
-     opacity: 0.4;
+    opacity: 0.4;
     margin: 50px 0 10px 0;
 
 }
@@ -83,21 +78,13 @@ input::placeholder{
     font-size:14px;
 }
 
-
-/* .form-title{
-    font-size: 20px;
-   text-align: center;
-    color: white;
-    padding: 10px 140px;
-    
-} */
-
 .form-title{
+    display: flex;
+    justify-content: center;
     text-align: center;
     color: #fff;
-    font-size: 20px;
-    position: relative;
-
+    font-size: 32px;
+    font-weight: 400;
 
 } 
 
@@ -109,38 +96,30 @@ input::placeholder{
 }
 .form-btn{
     display: flex;
-    /* padding: 10px;
-    margin: 10px; */
-    /* flex-direction: row; */
     justify-content: space-between;
 }
 .col {
     margin: 0 auto 0 auto;
     display: flex;
-    /* height: 1300px; */
+    height: 900px;
     width: 500px;
     flex-direction: column;
 }
 
 .container {
+    max-width: 1050px;
+    margin: 0 auto 55px auto;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    align-items: center;
-    flex-basis: 50%;
-    width: 100%;
-    height: 1600px;
-    
-}
+    justify-content: center;
+  }
 
 .logo-bottom {
+    display: flex;
      opacity: 0.4;
-    margin-top: 20px;;
+    margin-top: 20px;
+    margin-left:520px;
     
-}
-
-.col li {
-    list-style: none;
 }
 
 input[type="text"]:hover{
@@ -151,21 +130,14 @@ input[type="password"]:hover{
 }
 
 .title-content{
-    border-radius: 1px;
-  box-shadow: 0px 0px 0px 8px rgba(153,141,133,0.5);   
-  background: #ddd; 
-  padding: 8px; 
-  width: 350px; 
-  margin: 30px;
-}
+    background-color: #ddd;
+    box-shadow: 0px 0px 0px 8px rgba(0, 0, 0, 0.23);
+    border-radius: 3px;
+    padding: 8px; 
+    width: 400px; 
+    margin: 30px;
 
-.title-content li {
-    /* list-style-image: url(user.png); */
-    background-color: lightgrey;
-    padding-left: 30px;
-    list-style-type: none;
 }
-
 input{
     width: 100%;
     padding: 12px 20px;
@@ -246,6 +218,7 @@ input[type="checkbox"]{
     display:inline-block;
     width: 10px;
     height: 10px;
+    cursor: pointer;
 }
 
 .checkbox-wrapper{
@@ -297,8 +270,6 @@ input[type="checkbox"] {
    top: -10px;
 }
 
-
-
 .terms{
     color:#afafaf;
     /* display:inline-block; */
@@ -322,54 +293,23 @@ input #email .checkbox{
 
 }
 
+/* MEDIA QUERIES */
+
+@media screen and (max-width:768px){
+    .container{
+        text-align:center;
+        overflow:hidden;
+    }
 .sign-up{
-    justify-content: flex-end;
-}
-.form-titles {
-    display: flex;
-    flex-grow: 1
+   margin-top:170px;
 }
 
-
-
-/* custom checkbox  */
-/* input[type=checkbox] {
-    display: inline-block;
+.logo-bottom{
+    align-items:center;
+    margin-top:180px;
+    margin-left: 120px;
+    align-items:center;
+    justify-content:center;
 }
 
-label.terms input[type="checkbox"] {display:none;}
-label.terms span {
-  display:inline-block;
-  border:2px solid #BBB;
-  border-radius:10px;
-  width:25px;
-  height:25px;
-  vertical-align:middle;
-  margin:3px;
-  position: relative;
-  
 }
-label.terms :checked + span {
-  background:#6F6;
-  width:27px;
-  height:27px;
-  margin: 2px;
-}
-label.terms :checked + span:after {
-  
-  font-size: 20px;
-  position: absolute;
-  top: -2px;
-  left: 5px;
-  color: green;
-} */
-/* .username{
- background: url(img/user.png) no-repeat scroll 7px;
- padding-left: 70px;
- border: 1px solid #c6c6;    
-}
-.password {
-    background: url(img/lock.png) no-repeat scroll 7px;
-    padding-left: 70px;
-    border: 1px solid #c6c6;
-} */
