--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
     color: #fff;
     padding: 10px 10px;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .btn-done{
@@ -50,6 +52,8 @@ body {
     width: 50%;
     color: #fff;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
 }
 .btn-reset{
     background-color: #f4495b;
@@ -59,6 +63,8 @@ body {
     color: #fff;
     cursor: pointer;
     padding: 10px 10px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .logo {
@@ -130,8 +136,8 @@ input[type="password"]:hover{
 }
 
 .title-content{
-    background-color: #ddd;
-    box-shadow: 0px 0px 0px 8px rgba(0, 0, 0, 0.23);
+    background-color: #fff;
+    box-shadow: 0px 0px 0px 16px rgba(0, 0, 0, 0.23);
     border-radius: 3px;
     padding: 8px; 
     width: 400px; 
@@ -169,7 +175,7 @@ input{
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    color: #f3f3f3;
+    color: #afafaf;
 }
 .email {
     width: 100%;
@@ -179,7 +185,7 @@ input{
     background-repeat: no-repeat;
     background-position: 10px 10px;
     padding: 12px 20px 12px 40px;
-    color: #f3f3f3;
+    color: #afafaf;
 }
 .password {
     width: 100%;
@@ -189,7 +195,8 @@ input{
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    list-style-type: none
+    list-style-type: none;
+    color: #afafaf
 }
 .number{
     width: 100%;
@@ -222,7 +229,7 @@ input[type="checkbox"]{
 }
 
 .checkbox-wrapper{
-    display:inline-block;
+    display:block;
     
 }
 
@@ -272,7 +279,6 @@ input[type="checkbox"] {
 
 .terms{
     color:#afafaf;
-    /* display:inline-block; */
     margin-top:22px;
     position: relative;
     top: -10px;
